src/objects/nReview__c.object
<CustomObject>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>nCandidate__c</referenceTo>
        <relationshipName>Review</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Applied__c</fullName>
        <label>Job Applied</label>
        <referenceTo>nJob_Applied__c</referenceTo>
        <relationshipName>Review</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Number__c</fullName>
        <label>Review Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>nReview</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>r-{000}</displayFormat>
        <label>nReview id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>nReview</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>